name:                rhino
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/thinkmpink/rhino#readme
license:             BSD3
license-file:        LICENSE
author:              Michael Pinkham
maintainer:          mpinkham3@gmail.com
copyright:           Michael Pinkham 2017
category:            crypto
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib, Stream
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , word8
                     , base64-bytestring
  default-language:    Haskell2010

executable rhino-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , rhino
  default-language:    Haskell2010

test-suite rhino-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  --test-module:         TestS1C1
  main-is:             Spec.hs
  build-depends:       base
                     , rhino
                     , bytestring
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/thinkmpink/rhino
